--- a/css/lihelper.css
+++ b/css/lihelper.css
@@ -6,15 +6,18 @@ text-align:center;
 
   .index1 {
   /*set first page image */
-   width: 80%;
    margin-top:5%;
-   margin-right:10%;
-   margin-left:10%;
+   margin-right:9%;
+   margin-left:9%;
   }
   .container_self {
     width : 100%;
   }
   .header-width {
+    width : 92%;
+  }
+  
+  .body-width {
     width : 92%;
   }
   
