--- a/lihelper_app/css/lihelper.css
+++ b/lihelper_app/css/lihelper.css
@@ -67,3 +67,11 @@ margin-top:50%;
   margin-top: 5%;
   margin-left:100px;
 }
+
+.accordion-group-self {
+margin-bottom: 2px;
+border: 0px solid #E5E5E5;
+-webkit-border-radius: 4px;
+-moz-border-radius: 4px;
+border-radius: 4px;
+}
