--- a/lihelper_app/LiHelper3/css/lihelper.css
+++ b/lihelper_app/LiHelper3/css/lihelper.css
@@ -47,7 +47,7 @@ ul, menu, dir {
 	margin-top: 3px;
 	background-size: 60px;
  }
- .topbar .nav.nav-user {
+.nav-user {
     float: right;
 }
 .topbar .nav .dropdown li a {
@@ -68,58 +68,11 @@ background-color: none;
 -webkit-transition: none;
 -moz-transition: none;
 }
-.dropdown-menu a {
-display: block;
-padding: 3px 15px;
-clear: both;
-font-weight: normal;
-line-height: 18px;
-color: #333;
-white-space: nowrap;
-}
+
 .topbar a {
 color: #777;
 text-shadow: 0 1px 0 white;
 font-weight: bold;
-}
-.dropdown-menu a {
-display: block;
-padding: 3px 20px;
-clear: both;
-font-weight: normal;
-line-height: 20px;
-color: #333;
-white-space: nowrap;
-}
-
-.topbar .nav {
-	float: left;
-	margin: 0;
-	height: 53px;
-}
-.topbar .nav li {
-	display: inline-block;
-	line-height: 24px;
-	vertical-align: middle;
-	margin-left: 20px;
-	height: 23px;
-	padding: 15px 0;
-}
-
-.topbar .nav a.dropdown-toggle {
-padding: 0;
-background: transparent;
-}
-
-.topbar .nav .dropdown-menu {
-margin-top: -1px;
-padding: 0;
-right: -1px;
-border-top-color: #CCC;
-}
-.dropdown-menu.pull-right {
-right: 0;
-left: auto;
 }
 
 .clearfix {
@@ -168,17 +121,24 @@ box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
 width: 240px;
 }
 .main {
+border: 1px solid #E3E3E3;
 background: white;
 float: left;
-min-height: 575px;
-max-height: 800px;
-width: 680px;
+min-height: 375px;
+margin-left:10px;
+width: 695px;
+-webkit-border-radius: 4px;
+-moz-border-radius: 4px;
+border-radius: 4px;
+-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+-moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
 }
 .span9-lihelper {
-   height:90%;
+   height:auto;
 }
 .footer {
-margin-top: 78%;
+margin-bottom: 3%;
 text-align: center;
 color: #777;
 }
