--- a/lihelper_app/LiHelper3/css/lihelper.css
+++ b/lihelper_app/LiHelper3/css/lihelper.css
@@ -1,19 +1,19 @@
 html body table {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  line-height: 1.4em;
+  font-size: 15px;
+  line-height: 10px;
   color: #333333;
   background: url('../images/base-noise.jpeg?141b58b60994') #f5f5f5;
   -webkit-font-smoothing: antialiased; 
   }
   
  .topbar {
-  background: url('../images//header-bg.png?141b58b60994') repeat-x white;
+  background: url('../images//header-bg.png?141b58b60994')0 80px repeat-x white;
   color: #343434;
-  height: 53px;
+  height: 73px;
   position: relative;
   z-index: 1;
-  font-size: 13px;
+  font-size: 15px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.15);
   box-shadow: 0 1px 0px #eee inset; 
   }
@@ -40,12 +40,12 @@ ul, menu, dir {
 }
   .topbar .logo {
 	float: left;
-	width: 80px;
-	height: 40px;
+	width: 180px;
+	height: 80px;
 	background: url('../images/kippt-150.png?c569c91fe720') 0 10px no-repeat;
 	text-indent: -9999cm;
 	margin-top: 3px;
-	background-size: 60px;
+	background-size: 100px;
  }
 .nav-user {
     float: right;
@@ -116,9 +116,15 @@ border-radius: 4px;
 -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
 box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
 }
+.nav-header {
+font-size: 17px;
+}
+body {
+line-height: 10px;
+}
 
 .span3-lihelper {
-width: 200px;
+width: 210px;
 }
 .main {
 border: 1px solid #E3E3E3;
