--- a/lihelper_app/LiHelper2/css/lihelper2.css
+++ b/lihelper_app/LiHelper2/css/lihelper2.css
@@ -45,6 +45,23 @@
       color: #fff;
       text-shadow: 0 1px 1px rgba(0,0,0,.4);
     }
-    .carousel-caption .btn {
-      margin-top: 10px;
-    }
+	.btn1 {
+		font-size: 24px;
+		padding: 12px 32px;
+		text-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
+		font-weight: bold;
+		margin-top: 15px;
+		background: #5BB900;
+		box-shadow: none;
+		border: 0;
+	}
+	.btn1:hover {
+		background: #50a300;
+		color:white;
+	}
+	.btn1-green {
+		color:white;
+	}
+	a {
+		text-decoration: none;
+	}
